// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formField > renders with as correctly 1`] = `
"<section class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</section>"
`;

exports[`formField > renders with class correctly 1`] = `
"<div class="relative" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with default slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">Default slot
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with description slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Description slot</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with error correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <div id="v-0-0-error" class="" data-pohon="form-field-error">Username is already taken</div>
  </div>
</div>"
`;

exports[`formField > renders with error slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <div id="v-0-0-error" class="" data-pohon="form-field-error">Error slot</div>
  </div>
</div>"
`;

exports[`formField > renders with help correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <div id="v-0-0-help" class="" data-pohon="form-field-help">Username must be unique</div>
  </div>
</div>"
`;

exports[`formField > renders with help slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <div id="v-0-0-help" class="" data-pohon="form-field-help">Help slot</div>
  </div>
</div>"
`;

exports[`formField > renders with hint correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with hint slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with label and description correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with label slot correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Label slot</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with orientation horizontal correctly 1`] = `
"<div class="" data-pohon="form-field-root" data-orientation="horizontal">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with orientation vertical correctly 1`] = `
"<div class="" data-pohon="form-field-root" data-orientation="vertical">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with required correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with size lg correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with size md correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with size sm correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with size xl correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with size xs correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <div class="" data-pohon="form-field-label-wrapper"><label for="v-0-0" class="" data-pohon="form-field-label">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" class="" data-pohon="form-field-description">Enter your username</p>
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;

exports[`formField > renders with ui correctly 1`] = `
"<div class="" data-pohon="form-field-root">
  <div class="" data-pohon="form-field-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="" data-pohon="form-field-container">
    <!--v-if-->
  </div>
</div>"
`;
